--- a/css/common.css
+++ b/css/common.css
@@ -71,3 +71,45 @@ li {
   color: #fafafa;
   font-weight: bold;
 }
+
+.palette {
+  display: grid;
+  max-width: 1200px;
+  grid-template-columns: repeat(auto-fill, minimal(200px, 1fr));
+  grid-gap: 12px;
+  padding: 0;
+  list-style: none;
+  margin-left: auto;
+  margin-right: auto;
+}
+.color-card {
+  width: 400px;
+  padding: 5px;
+  border-radius: 10px;
+  background-color: #fff;
+  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* .color-card:hover {
+  transform: perspective(400px) rotateX(10deg);
+} */
+.color-card.is-active {
+  transform: perspective(400px) rotateX(10deg);
+}
+
+.color-swatch {
+  height: 128px;
+  cursor: pointer;
+}
+
+.color-meta {
+  padding: 10px;
+  font-weight: 700;
+}
+.color-meta p {
+  margin-top: 0;
+  margin-bottom: 0;
+  letter-spacing: 0.1em;
+}
